@@ -23,7 +23,7 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.99 2010/09/24 19:47:09 stream Exp $
+Version change log: $Id: CHANGES.txt,v 1.100 2010/09/27 17:44:07 stream Exp $
 ==========================================================================
 
 2.9100
@@ -40,6 +40,7 @@ Version change log: $Id: CHANGES.txt,v 1.99 2010/09/24 19:47:09 stream Exp $
             imp: x86: AMD Opteron/Phenom detection (#4326,#4256)
             fix: all: logging issues with more then 26 crunchers (#4345)
             imp: ppc: recognize more PowerPC processors (#4349)
+            imp: ppc: core selection for Power6 series (#4349)
 
 2.9108-517  imp: x86: new OGR-NG 32- and 64-bit cores (#4256)
             imp: x86: identification of new i5/i7 chips (#4271)
